added bids and file storage
